Layer 2 after first run

--- a/NGCF_take2_2layer.ipynb
+++ b/NGCF_take2_2layer.ipynb
@@ -48,10 +48,10 @@
       "metadata": {
         "id": "-GuQIsFhz_O6",
         "colab_type": "code",
-        "outputId": "01213845-c96c-4b98-8361-35d68520a3eb",
+        "outputId": "59d7fb9f-cb9e-47a6-a630-ccb1615e1bac",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 124
         }
       },
       "source": [
@@ -64,7 +64,11 @@
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -132,11 +136,11 @@
       "metadata": {
         "id": "YlgYT5KcKugh",
         "colab_type": "code",
+        "outputId": "36a54011-d8b6-40df-affd-3ff75c7fde50",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "8024ce05-3c39-4ed6-905a-9b2394d5f2dc"
+        }
       },
       "source": [
         "# real data\n",
@@ -282,7 +286,7 @@
         "import torch.nn.functional as F\n",
         "\n",
         "# path to save model to\n",
-        "models_path = path/'models'\n",
+        "models_path = path/'models/2layer'\n",
         "\n",
         "class NGCF(Module):\n",
         "  def __init__(self, n_users, n_items, embed_size, n_layers, adj_matrix):\n",
@@ -363,11 +367,7 @@
       "metadata": {
         "id": "x3plBLDjm5NH",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "798abfb1-a545-452a-c15b-b384e5f3a218"
+        "colab": {}
       },
       "source": [
         "# optional: restore previously trained model\n",
@@ -383,25 +383,17 @@
         "optimizer = torch.optim.Adam(model.parameters(), lr=0.005)\n",
         "\n",
         "# Restore a previous model\n",
-        "model, optimizer = restore_model(models_path, model, optimizer)"
+        "# model, optimizer = restore_model(models_path, model, optimizer)"
       ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Restored previous model\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "wHTQPAOcUD9X",
         "colab_type": "code",
-        "outputId": "3c6da74b-97e0-495e-ea93-22cf5f48eae1",
+        "outputId": "b7728b9d-477d-47b5-b27c-8904b56298d7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -492,249 +484,85 @@
         "    model.train()\n",
         "  print('\\n============\\n')"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Starting epoch: 1\n",
-            "Finished epoch 1 in\t748.3205902576447 sec\n",
-            "Total BPR loss:\t\t20.049512788653374\n",
-            "Average batch time:\t7.48320125579834\n",
+            "Finished epoch 1 in\t767.5449874401093 sec\n",
+            "Total BPR loss:\t\t41.65248754620552\n",
+            "Average batch time:\t7.675446431636811\n",
             "\n",
             "============\n",
             "\n",
             "Starting epoch: 2\n",
-            "Finished epoch 2 in\t747.4265201091766 sec\n",
-            "Total BPR loss:\t\t19.296502575278282\n",
-            "Average batch time:\t7.4742617464065555\n",
+            "Finished epoch 2 in\t760.3706982135773 sec\n",
+            "Total BPR loss:\t\t33.35927829146385\n",
+            "Average batch time:\t7.603703634738922\n",
             "\n",
             "============\n",
             "\n",
             "Starting epoch: 3\n",
-            "Finished epoch 3 in\t748.0292520523071 sec\n",
-            "Total BPR loss:\t\t18.557230845093727\n",
-            "Average batch time:\t7.480289001464843\n",
+            "Finished epoch 3 in\t754.8581511974335 sec\n",
+            "Total BPR loss:\t\t30.344553142786026\n",
+            "Average batch time:\t7.5485782408714295\n",
             "\n",
             "============\n",
             "\n",
             "Starting epoch: 4\n",
-            "Finished epoch 4 in\t748.0652596950531 sec\n",
-            "Total BPR loss:\t\t17.659307405352592\n",
-            "Average batch time:\t7.480648710727691\n",
+            "Finished epoch 4 in\t757.7021925449371 sec\n",
+            "Total BPR loss:\t\t28.549874305725098\n",
+            "Average batch time:\t7.577018437385559\n",
             "\n",
             "============\n",
             "\n",
             "Starting epoch: 5\n",
-            "Finished epoch 5 in\t748.0515072345734 sec\n",
-            "Total BPR loss:\t\t17.122695237398148\n",
-            "Average batch time:\t7.480511629581452\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([306])\n",
-            "Recall:\tnan\n",
-            "NDCG\t:0.04501167684793472\n",
+            "Finished epoch 5 in\t762.5368082523346 sec\n",
+            "Total BPR loss:\t\t26.677994072437286\n",
+            "Average batch time:\t7.625364582538605\n",
+            "Recall:\t0.009759376756846905\n",
+            "NDCG\t:0.029644031077623367\n",
             "\n",
             "============\n",
             "\n",
-            "Starting epoch: 6\n"
+            "Starting epoch: 6\n",
+            "Finished epoch 6 in\t753.6280279159546 sec\n",
+            "Total BPR loss:\t\t25.26940156519413\n",
+            "Average batch time:\t7.536276915073395\n",
+            "\n",
+            "============\n",
+            "\n",
+            "Starting epoch: 7\n",
+            "Finished epoch 7 in\t754.9151902198792 sec\n",
+            "Total BPR loss:\t\t23.938641294836998\n",
+            "Average batch time:\t7.549148135185241\n",
+            "\n",
+            "============\n",
+            "\n",
+            "Starting epoch: 8\n",
+            "Finished epoch 8 in\t754.2945711612701 sec\n",
+            "Total BPR loss:\t\t22.635579466819763\n",
+            "Average batch time:\t7.5429423451423645\n",
+            "\n",
+            "============\n",
+            "\n",
+            "Starting epoch: 9\n",
+            "Finished epoch 9 in\t757.1382775306702 sec\n",
+            "Total BPR loss:\t\t21.75838513672352\n",
+            "Average batch time:\t7.571379463672638\n",
+            "\n",
+            "============\n",
+            "\n",
+            "Starting epoch: 10\n",
+            "Finished epoch 10 in\t762.3062858581543 sec\n",
+            "Total BPR loss:\t\t20.643852338194847\n",
+            "Average batch time:\t7.62305860042572\n",
+            "Recall:\t0.013553389348089695\n",
+            "NDCG\t:0.04013912379741669\n",
+            "\n",
+            "============\n",
+            "\n"
           ],
           "name": "stdout"
         }
@@ -745,11 +573,11 @@
       "metadata": {
         "id": "dS9_dY7MpZy9",
         "colab_type": "code",
+        "outputId": "2764ac84-26b0-49b5-d2ad-60d34a538b3d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "2764ac84-26b0-49b5-d2ad-60d34a538b3d"
+        }
       },
       "source": [
         "def compute_ndcg(top_items, test_items, test_indices, k):\n",
@@ -794,7 +622,7 @@
         "\n",
         "evaluate(model.user_embeddings_final.detach(), model.item_embeddings_final.detach(), k=20)"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
