Cleanup of redundancies

--- a/NGCF.ipynb
+++ b/NGCF.ipynb
@@ -22,7 +22,24 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/SytzeAndr/NGCF_RP32/blob/master/NGCF_take2_2layer.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/SytzeAndr/NGCF_RP32/blob/hand-in/NGCF.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0__Y6ufpuHS7",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Reproducting Graph Neural Collaborative Filtering\n",
+        "\n",
+        "[Link to original paper](https://arxiv.org/abs/1905.08108)\n",
+        "\n",
+        "Authors: \n",
+        " - @MathiasMeuleman\n",
+        " - @SytzeAndr\n",
+        " - @sinuochen"
       ]
     },
     {
@@ -48,31 +65,16 @@
       "metadata": {
         "id": "-GuQIsFhz_O6",
         "colab_type": "code",
-        "outputId": "59d7fb9f-cb9e-47a6-a630-ccb1615e1bac",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 124
-        }
+        "colab": {}
       },
       "source": [
         "from google.colab import drive\n",
         "\n",
+        "# Mount drive for permanent file storage\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/drive\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -128,7 +130,9 @@
         "colab_type": "text"
       },
       "source": [
-        "# Data Loading"
+        "# Data Loading\n",
+        "\n",
+        "The `DataLoader` class mainly takes care of loading the data. In addition, it has functions to compute and store the adjacency matrix and can be used for easy batch sampling."
       ]
     },
     {
@@ -136,17 +140,10 @@
       "metadata": {
         "id": "YlgYT5KcKugh",
         "colab_type": "code",
-        "outputId": "36a54011-d8b6-40df-affd-3ff75c7fde50",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "colab": {}
       },
       "source": [
-        "# real data\n",
-        "path = Path('./drive/My Drive/RP_data/backup')\n",
-        "# toy data\n",
-        "# path = Path('./drive/My Drive/RP_data/toy_data')\n",
+        "path = Path('./drive/My Drive/RP_data/')\n",
         "train_file = path/'train.txt'\n",
         "test_file = path/'test.txt'\n",
         "\n",
@@ -253,16 +250,8 @@
         "train_data.set_adj_matrix()\n",
         "test_data = DataLoader(test_file, batch_size=1024)"
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Loaded existing adj_matrix\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -271,7 +260,9 @@
         "colab_type": "text"
       },
       "source": [
-        "# Optimization"
+        "# Model definition\n",
+        "\n",
+        "The NGCF class defines the network for the NGCF framework. The forward function performs message construction and message aggregation, followed by computing the pairwise BPR loss on the predictions."
       ]
     },
     {
@@ -363,6 +354,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "v49krYQRskMO",
+        "colab_type": "text"
+      },
+      "source": [
+        "Define the model and optimizer. Includes a utility function to restore the state of the model and optimizer. Handy when training for a long time and finding that Google suddenly restricted yout GPU time."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "x3plBLDjm5NH",
@@ -383,26 +384,34 @@
         "optimizer = torch.optim.Adam(model.parameters(), lr=0.005)\n",
         "\n",
         "# Restore a previous model\n",
-        "# model, optimizer = restore_model(models_path, model, optimizer)"
+        "model, optimizer = restore_model(models_path, model, optimizer)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "C1orGkBxtiRY",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Optimization and evaluation\n",
+        "\n",
+        "Here, training and evaluation is peformed.\n"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "wHTQPAOcUD9X",
         "colab_type": "code",
-        "outputId": "b7728b9d-477d-47b5-b27c-8904b56298d7",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        }
+        "colab": {}
       },
       "source": [
         "from time import time\n",
         "\n",
-        "n_epochs = 10\n",
+        "n_epochs = 1\n",
         "\n",
         "model.train()\n",
         "n_batch = train_data.n_data // train_data.batch_size + 1\n",
@@ -456,7 +465,7 @@
         "  total_loss = 0\n",
         "  start = time()\n",
         "  timings = []\n",
-        "  for b in range(100):\n",
+        "  for b in range(n_batch):\n",
         "    batch_start = time()\n",
         "    u, i, j = data.sample()\n",
         "    u = torch.from_numpy(u).long().to(device)\n",
@@ -483,288 +492,6 @@
         "    evaluate(model.user_embeddings_final.detach(), model.item_embeddings_final.detach(), k=20)\n",
         "    model.train()\n",
         "  print('\\n============\\n')"
-      ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Starting epoch: 1\n",
-            "Finished epoch 1 in\t767.5449874401093 sec\n",
-            "Total BPR loss:\t\t41.65248754620552\n",
-            "Average batch time:\t7.675446431636811\n",
-            "\n",
-            "============\n",
-            "\n",
-            "Starting epoch: 2\n",
-            "Finished epoch 2 in\t760.3706982135773 sec\n",
-            "Total BPR loss:\t\t33.35927829146385\n",
-            "Average batch time:\t7.603703634738922\n",
-            "\n",
-            "============\n",
-            "\n",
-            "Starting epoch: 3\n",
-            "Finished epoch 3 in\t754.8581511974335 sec\n",
-            "Total BPR loss:\t\t30.344553142786026\n",
-            "Average batch time:\t7.5485782408714295\n",
-            "\n",
-            "============\n",
-            "\n",
-            "Starting epoch: 4\n",
-            "Finished epoch 4 in\t757.7021925449371 sec\n",
-            "Total BPR loss:\t\t28.549874305725098\n",
-            "Average batch time:\t7.577018437385559\n",
-            "\n",
-            "============\n",
-            "\n",
-            "Starting epoch: 5\n",
-            "Finished epoch 5 in\t762.5368082523346 sec\n",
-            "Total BPR loss:\t\t26.677994072437286\n",
-            "Average batch time:\t7.625364582538605\n",
-            "Recall:\t0.009759376756846905\n",
-            "NDCG\t:0.029644031077623367\n",
-            "\n",
-            "============\n",
-            "\n",
-            "Starting epoch: 6\n",
-            "Finished epoch 6 in\t753.6280279159546 sec\n",
-            "Total BPR loss:\t\t25.26940156519413\n",
-            "Average batch time:\t7.536276915073395\n",
-            "\n",
-            "============\n",
-            "\n",
-            "Starting epoch: 7\n",
-            "Finished epoch 7 in\t754.9151902198792 sec\n",
-            "Total BPR loss:\t\t23.938641294836998\n",
-            "Average batch time:\t7.549148135185241\n",
-            "\n",
-            "============\n",
-            "\n",
-            "Starting epoch: 8\n",
-            "Finished epoch 8 in\t754.2945711612701 sec\n",
-            "Total BPR loss:\t\t22.635579466819763\n",
-            "Average batch time:\t7.5429423451423645\n",
-            "\n",
-            "============\n",
-            "\n",
-            "Starting epoch: 9\n",
-            "Finished epoch 9 in\t757.1382775306702 sec\n",
-            "Total BPR loss:\t\t21.75838513672352\n",
-            "Average batch time:\t7.571379463672638\n",
-            "\n",
-            "============\n",
-            "\n",
-            "Starting epoch: 10\n",
-            "Finished epoch 10 in\t762.3062858581543 sec\n",
-            "Total BPR loss:\t\t20.643852338194847\n",
-            "Average batch time:\t7.62305860042572\n",
-            "Recall:\t0.013553389348089695\n",
-            "NDCG\t:0.04013912379741669\n",
-            "\n",
-            "============\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "dS9_dY7MpZy9",
-        "colab_type": "code",
-        "outputId": "2764ac84-26b0-49b5-d2ad-60d34a538b3d",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
-        }
-      },
-      "source": [
-        "def compute_ndcg(top_items, test_items, test_indices, k):\n",
-        "  ratings = (test_items * top_items).gather(1, test_indices)\n",
-        "  norm = torch.from_numpy(np.log2(np.arange(2, k+2))).float().to(device)\n",
-        "  dcg = (ratings / norm).sum(1)\n",
-        "  dcg_max = (torch.sort(ratings, dim=1, descending=True)[0] / norm).sum(1)\n",
-        "  ndcg = dcg / dcg_max\n",
-        "  ndcg[torch.isnan(ndcg)] = 0\n",
-        "  return ndcg\n",
-        "\n",
-        "def evaluate(user_embeddings, item_embeddings, k):\n",
-        "  user_parts = split_mtx(user_embeddings)\n",
-        "  train_parts = split_mtx(train_data.R)\n",
-        "  test_parts = split_mtx(test_data.R)\n",
-        "\n",
-        "  recall_parts, ndcg_parts = [], []\n",
-        "\n",
-        "  for user_part, train_part, test_part in zip(user_parts, train_parts, test_parts):\n",
-        "\n",
-        "    # Get the prediction scores for the users and items as a cuda float\n",
-        "    non_train_items = torch.from_numpy(1 - (train_part.todense())).float().to(device)\n",
-        "    predictions = torch.mm(user_part, item_embeddings.t()) * non_train_items\n",
-        "    # Get the k highest scores, scatter them as a float tensor in the GPU\n",
-        "    _, test_indices = torch.topk(predictions, dim=1, k=k)\n",
-        "    top_items = torch.zeros_like(predictions).float()\n",
-        "    top_items.scatter_(dim=1, index=test_indices, src=torch.tensor(1.0).to(device))\n",
-        "  \n",
-        "    test_items = torch.from_numpy(test_part.todense()).float().to(device)\n",
-        "    TP = (test_items * top_items).sum(1)\n",
-        "    recall = TP / test_items.sum(1)\n",
-        "    recall[torch.isnan(recall)] = 1\n",
-        "    ndcg = compute_ndcg(top_items, test_items, test_indices, k)\n",
-        "  \n",
-        "    recall_parts.append(recall)\n",
-        "    ndcg_parts.append(ndcg)\n",
-        "\n",
-        "  mean_recall = torch.cat(recall_parts).mean()\n",
-        "  mean_ndcg = torch.cat(ndcg_parts).mean()\n",
-        "  print('Recall:\\t' + str(mean_recall.item()))\n",
-        "  print('NDCG:\\t' + str(mean_ndcg.item()))\n",
-        "\n",
-        "evaluate(model.user_embeddings_final.detach(), model.item_embeddings_final.detach(), k=20)"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Recall:\t0.015093409456312656\n",
-            "NDCG\t:0.04501167684793472\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "iUl49uXH17W2",
-        "colab_type": "text"
-      },
-      "source": [
-        "# Evaluation"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_2P6ncEkiE2R",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def split_mtx(X, n_folds=100):\n",
-        "  # Split a matrix/Tensor into n_folds (for the user embeddings and the R matrices)\n",
-        "  X_folds = []\n",
-        "  fold_len = X.shape[0]//n_folds\n",
-        "  for i in range(n_folds):\n",
-        "    start = i * fold_len\n",
-        "    if i == n_folds -1:\n",
-        "      end = X.shape[0]\n",
-        "    else:\n",
-        "      end = (i + 1) * fold_len\n",
-        "    X_folds.append(X[start:end])\n",
-        "  return X_folds\n",
-        "\n",
-        "def ndcg_at_k_gpu(pred_items, test_items, test_indices, k):\n",
-        "  # to calculate ndcg@k\n",
-        "  r = (test_items * pred_items).gather(1, test_indices)\n",
-        "  f = torch.from_numpy(np.log2(np.arange(2, k+2))).float().cuda()\n",
-        "  dcg = (r[:, :k]/f).sum(1)\n",
-        "  dcg_max = (torch.sort(r, dim=1, descending=True)[0][:, :k]/f).sum(1)\n",
-        "  ndcg = dcg/dcg_max\n",
-        "  ndcg[torch.isnan(ndcg)] = 0\n",
-        "  return ndcg\n",
-        "\n",
-        "def test_GPU(u_emb, i_emb, Rtr, Rte, Ks):\n",
-        "  ue_folds = split_mtx(u_emb)\n",
-        "  tr_folds = split_mtx(Rtr)\n",
-        "  te_folds = split_mtx(Rte)\n",
-        "\n",
-        "  fold_prec, fold_rec, fold_ndcg, fold_hr = \\\n",
-        "    defaultdict(list), defaultdict(list), defaultdict(list), defaultdict(list)\n",
-        "  for ue_f, tr_f, te_f in zip(ue_folds, tr_folds, te_folds):\n",
-        "    scores = torch.mm(ue_f, i_emb.t())\n",
-        "    test_items = torch.from_numpy(te_f.todense()).float().cuda()\n",
-        "    non_train_items = torch.from_numpy(1-(tr_f.todense())).float().cuda()\n",
-        "    scores = scores * non_train_items\n",
-        "    _, test_indices = torch.topk(scores, dim=1, k=max(Ks))\n",
-        "    pred_items = torch.zeros_like(scores).float()\n",
-        "    pred_items.scatter_(dim=1,index=test_indices,src=torch.tensor(1.0).cuda())\n",
-        "\n",
-        "    for k in Ks:\n",
-        "      topk_preds = torch.zeros_like(scores).float()\n",
-        "      topk_preds.scatter_(dim=1,index=test_indices[:, :k],src=torch.tensor(1.0))\n",
-        "\n",
-        "      TP = (test_items * topk_preds).sum(1)\n",
-        "      prec = TP/k\n",
-        "      rec = TP/test_items.sum(1)\n",
-        "      hit_r = (TP > 0).float()\n",
-        "      ndcg = ndcg_at_k_gpu(pred_items, test_items, test_indices, k)\n",
-        "\n",
-        "      fold_prec[k].append(prec)\n",
-        "      fold_rec[k].append(rec)\n",
-        "      fold_ndcg[k].append(ndcg)\n",
-        "      fold_hr[k].append(hit_r)\n",
-        "\n",
-        "  result = {'precision': [], 'recall': [], 'ndcg': [], 'hit_ratio': []}\n",
-        "  for k in Ks:\n",
-        "    result['precision'].append(torch.cat(fold_prec[k]).mean())\n",
-        "    result['recall'].append(torch.cat(fold_rec[k]).mean())\n",
-        "    result['ndcg'].append(torch.cat(fold_ndcg[k]).mean())\n",
-        "    result['hit_ratio'].append(torch.cat(fold_hr[k]).mean())\n",
-        "  return result\n",
-        "\n",
-        "def early_stopping(log_value, best_value, stopping_step, expected_order='asc', patience=10):\n",
-        "  # better is higher or lower\n",
-        "  assert expected_order in ['asc', 'dec']\n",
-        "  if (expected_order == 'asc' and log_value >= best_value) or (expected_order == 'dec' and log_value <= best_value):\n",
-        "    stopping_step = 0\n",
-        "    best_value = log_value\n",
-        "  else:\n",
-        "    stopping_step += 1\n",
-        "  if stopping_step >= patience:\n",
-        "    print(\"Early stopping is trigger at step: {} log:{}\".format(patience, log_value))\n",
-        "    should_stop = True\n",
-        "  else:\n",
-        "    should_stop = False\n",
-        "  return best_value, stopping_step, should_stop\n",
-        "\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Z5O4b6tWqeQs",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# with early stopping\n",
-        "print_every, eval_every, save_every = 1, 1, 10\n",
-        "Ks = [10, 20]\n",
-        "\n",
-        "model = NGCF(n_users=1000, n_items=2000, embed_size=64, n_layers=2, adj_matrix=train_data.L)\n",
-        "optimizer = torch.optim.Adam(model.parameters(), lr=0.05)\n",
-        "n_epochs = 20\n",
-        "\n",
-        "model.train()\n",
-        "n_batch = train_data.n_data // train_data.batch_size + 1\n",
-        "print('Total batches: ' + str(n_batch))\n",
-        "\n",
-        "cur_best_loss, stopping_step, should_stop = 1e3, 0, False\n",
-        "\n",
-        "for t in range(n_epochs):\n",
-        "  epoch_loss = train(model, train_data)\n",
-        "  print(str(t) + ': ' + str(epoch_loss))\n",
-        "  if epoch % eval_every  == (eval_every - 1):\n",
-        "    result = test_GPU(model.user_embeddings_final.detach(), model.item_embeddings_final.detach(), train_data.R, test_data.R, Ks)\n",
-        "    log_value = result['recall'][0]\n",
-        "    cur_best_metric, stopping_step, should_stop = early_stopping(log_value, cur_best_metric, stopping_step, args.patience)\n",
-        "  if should_stop == True: \n",
-        "    break\n",
-        "  "
       ],
       "execution_count": 0,
       "outputs": []
